--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,10 @@ PORT=3000
 JWT_SECRET="your-super-secret-jwt-key-change-in-production"
 JWT_EXPIRY="7d"
 
+# Privacy & Security
+# Salt for IP address hashing (change in production for privacy)
+IP_SALT="your-random-salt-for-ip-hashing-change-in-production"
+
 # CORS Configuration
 CORS_ORIGIN="http://localhost:5173"
 
